--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li id="insta"><a href="https://www.instagram.com/reyszey/" target="-blank" >اینستاگرام</a></li>
                 </ul>
             </li>
-            <li><a href="/webino/login page/login.html">ورود</a></li>
+            <li><a href="/webino/login.html">ورود</a></li>
         </ul>
     </nav>
     
