--- a/login.html
+++ b/login.html
@@ -16,8 +16,8 @@
             <h1>ورود به حساب کاربری</h1>
             <input type="text" name="name" id="user-name" placeholder="نام کاربری">
             <input type="password" name="pass" id="user-pass" placeholder="رمز عبور">
-            <a id="login" href="/index/index.html">ورود</a>
-            <a id="sign" href="/signup/signup.html">ایجاد حساب کاربری</a>
+            <a id="login" href="/webino/index.html">ورود</a>
+            <a id="sign" href="/webino/signup.html">ایجاد حساب کاربری</a>
             
 
         </form>
