--- a/signup.html
+++ b/signup.html
@@ -19,8 +19,8 @@
             <input type="email" name="email" id="user-email" placeholder="ایمیل">
             
             <input type="password" name="pass" id="user-pass" placeholder="رمز عبور">
-            <a id="signup" href="/index/index.html">ثبت نام</a>
-            <a id="login" href="/webino/login page/login.html">ورود به حساب</a>
+            <a id="signup" href="/webino/index.html">ثبت نام</a>
+            <a id="login" href="/webino/login.html">ورود به حساب</a>
 
         </form>
     </div>
