--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webino</title>
     <link rel="stylesheet" href="/webino/style.css">
-    <link rel="shortcut icon" href="/webino/img/logo.png">
+    <link rel="shortcut icon" href="/webino/logo.png">
 </head>
 <body>
     <nav class="nav-class">
